--- a/GUI/style.css
+++ b/GUI/style.css
@@ -15,7 +15,7 @@ html {
 
 .form {
     background-color: rgb(255, 255, 255);
-    position: relative;
+    position: absolute;
     height: 100%;
     width: 100%;
     visibility: visible;    
@@ -105,8 +105,13 @@ tr {
     text-align: center;
 }
 
+tbody tr:nth-child(odd){
+  background-color: rgb(220, 220, 220);
+}
+
 #Room_Panel {
-    border: 1px solid #888;
+    width: min-content;
+    border: 2px solid #888;
     border-radius: 8px;
     box-shadow: 0 3px 5px 0 rgba(0,0,0,0.5);
     transform: translate(-50%,-50%);
@@ -135,7 +140,17 @@ tr {
 
 #Tabs button {
     width: 33.33%;
-    margin-bottom: 20px;
+    border-color: #242424;
+}
+
+#Tabs .unselected {
+    background-color: #242424;
+    color: white;
+}
+
+#Tabs .selected {
+    background-color: white;
+    color: black;
 }
 
 #Tabs #Tb1 {
@@ -146,18 +161,30 @@ tr {
     border-top-right-radius: 8px;
 }
 
-#Panel1 {
+#Panel0 {
     border: 1px solid #888;
     border-radius: 8px;
     box-shadow: 0 3px 5px 0 rgba(0,0,0,0.5)
 }
 
+#Panel1 {
+    border: 1px solid #242424;
+    border-radius: 8px;
+    border-color: #242424;
+}
+
 #Tab1 {
     padding-left: 30px;
+    padding-top: 10px;
 }
 
 .flex2 {
-    padding: 0px 10px 10px 10px;
+    padding: 5px 10px 10px 10px;
+    justify-content: space-between;
+}
+
+.flex3 {
+    padding: 5px;
     justify-content: space-between;
 }
 
@@ -198,4 +225,64 @@ tr {
     border: 1px solid #888;
     border-radius: 8px;
     box-shadow: 0 3px 5px 0 rgba(0,0,0,0.5)
+}
+
+.Card2 {
+    border: 1px solid #888;
+    border-radius: 8px;
+    background-color: white;
+}
+
+.tbl50 {
+    overflow-y: scroll;
+    height: 70vh;
+}
+
+.btA {
+    padding: 2px 10px 2px 10px;
+    border: 1px solid #888;
+    border-radius: 8px;
+    background-color: #242424;
+    color: white;
+}
+
+.btB {
+    padding: 2px 10px 2px 10px;
+    margin: 4px;
+    border: 1px solid #888;
+    border-radius: 8px;
+    background-color: #242424;
+    color: white;
+}
+
+.z100 {
+    z-index: 100;
+}
+
+#IDB {
+    height: min-content;
+    width: 300px;
+}
+
+#IDB div{
+    background-color: #242424;
+    color: white;
+    width: 100%;
+    height: min-content;
+    padding-left: 10px;
+}
+
+#IDB span {
+    display: flex;
+    flex-direction: column;
+}
+
+#IDB label {
+    padding-left: 10px;
+}
+
+#IDB button {
+    margin-left: 220px;
+    margin-right: 10px;
+    margin-bottom: 5px;
 }
